[package]
name = "tower-fault-injector"
description = "Tower layers for fault injection"
version = "0.0.3"
edition = "2021"
authors = ["nicolas.moutschen@gmail.com"]
license = "MIT"
repository = "https://github.com/nmoutschen/tower-fault-injector"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", optional = true }
tower = { version = "0.4", features = ["util"] }
tokio = { version = "1", features = ["time", "rt", "macros"], optional = true }

[features]
default = []
full = ["error", "latency"]

error = ["rand", "tokio"]
latency = ["rand", "tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]