[package]
name = "tower-fault"
description = "Tower layers for fault injection"
version = "0.0.5"
edition = "2021"
authors = ["nicolas.moutschen@gmail.com"]
license = "MIT"
repository = "https://github.com/nmoutschen/tower-fault"

[dependencies]
paste = "1.0"
rand = "0.8"
tower = { version = "0.4", features = ["util"] }
tokio = { version = "1", features = ["time", "rt", "macros"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

# Axum example
axum = "0.4"

# Lambda example
lambda_http = "0.5"

[features]
default = ["full"]
full = ["error", "latency"]

error = ["tokio"]
latency = ["tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]